--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -69,6 +69,20 @@ builds:
       - amd64
       - arm
       - arm64
+  - id: falcon_registry_token
+    binary: falcon_registry_token
+    main: ./examples/falcon_registry_token
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - darwin
+      - linux
+      - windows
+    goarch:
+      - 386
+      - amd64
+      - arm
+      - arm64
 
 archives:
 - replacements:
