Use latest golangci lint version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v2
       with:
-        version: v1.29
+        version: latest
         args: --timeout=3m12s
 
     - name: "Check: go fmt"
