CI: ensure go mod tidy is run

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,4 +48,9 @@ jobs:
             echo "Please run: go fmt ./..."
             exit 1
         fi
+        if [ "$(go mod tidy -v)" -qt 0 ]; then
+            go mod tidy -v
+            echo "Please run: go mod tidy"
+            exit 1
+        fi
       if: matrix.os == 'ubuntu-latest'
