--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -28,3 +28,8 @@ jobs:
 
     - name: Autobuild
       uses: github/codeql-action/autobuild@v1
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v1
+    - run: |
+        echo "x"
