Example: falcon_discover_host_details

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -27,6 +27,20 @@ builds:
       - amd64
       - arm
       - arm64
+  - id: falcon_discover_host_details
+    binary: falcon_discover_host_details
+    main: ./examples/falcon_discover_host_details
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - darwin
+      - linux
+      - windows
+    goarch:
+      - 386
+      - amd64
+      - arm
+      - arm64
   - id: falcon_event_stream
     binary: falcon_event_stream
     main: ./examples/falcon_event_stream
@@ -180,6 +194,8 @@ nfpms:
         dst: /usr/share/doc/gofalcon/falcon_sensor_download.md
       - src: examples/falcon_cleanup_pods
         dst: /usr/share/doc/gofalcon/falcon_cleanup_pods
+      - src: examples/falcon_discover_host_details
+        dst: /usr/share/doc/gofalcon/falcon_discover_host_details
       - src: examples/falcon_event_stream
         dst: /usr/share/doc/gofalcon/falcon_event_stream
       - src: examples/falcon_get_cid
