Avoid go installation warnings during golangci-lint action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,9 @@ jobs:
       with:
         version: v1.29
         args: --timeout=3m12s
+        skip-go-installation: true
+        skip-pkg-cache: true
+        skip-build-cache: true
 
     - name: "Check: go fmt"
       run: |
