--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,7 @@ name: goreleaser
 
 on:
   push:
-    tags:
-      - '*'
+    branches: [ releaser-test ]
 
 jobs:
   goreleaser:
@@ -25,5 +24,3 @@ jobs:
         with:
           version: latest
           args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
