--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -153,6 +153,20 @@ builds:
       - amd64
       - arm
       - arm64
+  - id: falcon_supported_kernels
+    binary: falcon_supported_kernels
+    main: ./examples/falcon_supported_kernels
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - darwin
+      - linux
+      - windows
+    goarch:
+      - 386
+      - amd64
+      - arm
+      - arm64
   - id: falcon_intel_indicators
     binary: falcon_intel_indicators
     main: ./examples/falcon_intel_indicators
@@ -240,6 +254,8 @@ nfpms:
         dst: /usr/share/doc/gofalcon/falcon_registry_token
       - src: examples/falcon_spotlight_vulnerabilities
         dst: /usr/share/doc/gofalcon/falcon_spotlight_vulnerabilities
+      - src: examples/falcon_supported_kernels
+        dst: /usr/share/doc/gofalcon/falcon_supported_kernels
       - src: examples/falcon_intel_indicators
         dst: /usr/share/doc/gofalcon/falcon_intel_indicators
 
