--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -181,17 +181,6 @@ builds:
       - amd64
       - arm
       - arm64
-    env:
-      - CGO_ENABLED=0
-    goos:
-      - darwin
-      - linux
-      - windows
-    goarch:
-      - 386
-      - amd64
-      - arm
-      - arm64
   - id: falcon_intel_indicators
     binary: falcon_intel_indicators
     main: ./examples/falcon_intel_indicators
@@ -244,6 +233,7 @@ changelog:
 nfpms:
   - id: falcon_sensor_download
     package_name: gofalcon-utils
+    maintainer: simon.lukasik@crowdstrike.com
 
     file_name_template: "{{ .ProjectName }}-{{ .Version }}-{{ .Release }}.{{ .Arch }}"
     replacements:
