--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -239,12 +239,13 @@ builds:
       - arm64
 
 archives:
-- replacements:
-    darwin: macOS
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
+- name_template: >-
+      {{ .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else if eq .Arch "darwin" }}macOS
+      {{- else }}{{ .Arch }}{{ end }}
 
 checksum:
   name_template: 'checksums.txt'
@@ -261,14 +262,17 @@ changelog:
 nfpms:
   - id: falcon_sensor_download
     package_name: gofalcon-utils
-    maintainer: simon.lukasik@crowdstrike.com
+    maintainer: integrations@crowdstrike.com
 
-    file_name_template: "{{ .ProjectName }}-{{ .Version }}-{{ .Release }}.{{ .Arch }}"
-    replacements:
-      386: i686
-      amd64: x86_64
-      arm: aarch32
-      arm64: aarch64
+    file_name_template: >-
+      {{ .ProjectName }}-
+      {{ .Version }}-
+      {{ .Release }}.
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i686
+      {{- else if eq .Arch "arm" }}aarch32
+      {{- else if eq .Arch "arm64" }}aarch64
+      {{- else }}{{ .Arch }}{{ end }}
 
     formats:
       - deb
