--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -21,6 +21,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run Gosec Security Scanner
-      uses: securego/gosec@master
+      uses: securego/gosec@v2.20.0
       with:
-        args: ./...
+        args: '-no-fail -fmt sarif -out results.sarif ./...'
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        sarif_file: results.sarif
