--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,9 +39,7 @@ jobs:
       uses: golangci/golangci-lint-action@v6
       with:
         args: --timeout=3m12s
-        skip-go-installation: true
-        skip-pkg-cache: true
-        skip-build-cache: true
+        skip-cache: true
 
     - name: "Check: go fmt"
       run: |
